[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/x_mcp"]

[project]
name = "x-mcp-lite"
version = "0.3.0"
description = "Safety-focused lite fork of x-mcp: read-only + bookmarks + likes, with anti-rate-limit layer"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "huakexie", email = "" }
]
dependencies = [
    "fastmcp>=0.4.1",
    "mcp>=1.2.0",
    "twikit>=2.2.1",
    "requests>=2.31.0"
]

[project.urls]
Homepage = "https://github.com/huakexie/x-mcp-lite"

[project.scripts]
x-mcp-lite = "x_mcp.twitter:mcp.run"
